# ascension

./: .env  .gitignore  README.md  add_list.py  auto_apply.py  create_optimised_cv.py  fetch.py  job_apply.py  main.py  prompts.txt  pyproject.toml  requirements.txt  resume.txt  tools.py
app/: README.md  index.html  package-lock.json  package.json  server.ts  tailwind.config.ts
app/src/: App.tsx  index.css
app/src/components/: AmbientGrid.tsx  AuthModal.tsx  Button.tsx  CursorShadow.tsx  FocusReveal.tsx  FormHint.tsx  Header.tsx  Input.tsx  RecentUploads.tsx  Toast.tsx  UploadCard.tsx  Wordmark.tsx
app/src/contexts/: SessionContext.tsx
app/src/pages/: Dashboard.tsx  Index.tsx  NotFound.tsx
src/: apply_agent.py  create_optimised_cv.py  llm.py  main.py  models.py  utils.py
src/outputs/: optimised_cv.aux  optimised_cv.out  optimised_cv.tex
